[metadata]
name = utilitykit
version = 0.0.2
author = Tommaso Morello
author_email = nonicknamethankyou@gmail.com
description =
long_description = file: README.md
long_description_content_type =
url = https://github.com/mortommy/UtililtyKit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
